--- a/index.html
+++ b/index.html
@@ -710,7 +710,7 @@
 
   </span>
   (2016).
-  <a href="/publication/oem/" itemprop="name">OnlineElastMan: Self-Trained Proactive Elasticity Manager for Cloud-Based Storage Services</a>.
+  <a href="https://ieeexplore.ieee.org/document/7774960" itemprop="name">OnlineElastMan: Self-Trained Proactive Elasticity Manager for Cloud-Based Storage Services</a>.
   in <em><a href="http://www.autonomic-conference.org/">ICCAC'16</a></em>.
   
   <p>
@@ -795,7 +795,7 @@
 
   </span>
   (2017).
-  <a href="/publication/oem/" itemprop="name">OnlineElastMan: Self-Trained Proactive Elasticity Manager for Cloud-Based Storage Services</a>.
+  <a href="https://link.springer.com/article/10.1007/s10586-017-0899-z" itemprop="name">OnlineElastMan: Self-Trained Proactive Elasticity Manager for Cloud-Based Storage Services</a>.
   in <em><a href="https://link.springer.com/article/10.1007/s10586-017-0899-z">Cluster Computing</a></em>.
   
   <p>
@@ -864,7 +864,7 @@
 
   </span>
   (2017).
-  <a href="/publication/swap/" itemprop="name">Profiling for Asymmetric NUMA Systems</a>.
+  <a href="https://eurodw17.kaust.edu.sa/abstracts/eurodw17-final8.pdf" itemprop="name">Profiling for Asymmetric NUMA Systems</a>.
   in <em><a href="https://eurodw17.kaust.edu.sa/">EuroDW'17</a></em>.
   
   <p>
@@ -941,7 +941,7 @@
 
   </span>
   (2018).
-  <a href="/publication/swap/" itemprop="name">Asymmetry-aware page placement for contemporary NUMA architectures</a>.
+  <a href="https://sites.google.com/site/sfma2018eurosys/" itemprop="name">Asymmetry-aware page placement for contemporary NUMA architectures</a>.
   in <em><a href="https://sites.google.com/site/sfma2018eurosys/">SFMA'18</a></em>.
   
   <p>
@@ -1018,7 +1018,7 @@
 
   </span>
   (2020).
-  <a href="/publication/swap/" itemprop="name">BWAP: Bandwidth-Aware Page Placement for NUMA Systems</a>.
+  <a href="https://ieeexplore.ieee.org/document/9139869" itemprop="name">BWAP: Bandwidth-Aware Page Placement for NUMA Systems</a>.
   in <em><a href="https://www.ipdps.org/ipdps2020/">IPDPS'20</a></em>.
   
   <p>
