--- a/publication/index.html
+++ b/publication/index.html
@@ -31,7 +31,7 @@
   <meta name="description" content="Ph.D. Candidate">
 
   
-  <link rel="alternate" hreflang="en-us" href="https://sc2682cornell.github.io/publication/">
+  <link rel="alternate" hreflang="en-us" href="https://gureya.github.io/publication/">
 
   
 
@@ -91,14 +91,14 @@
   
 
   
-  <link rel="alternate" href="/publication/index.xml" type="application/rss+xml" title="Welcome to Shuang Chen&#39;s Homepage">
+  <link rel="alternate" href="/publication/index.xml" type="application/rss+xml" title="Welcome to David Gureya&#39;s Homepage">
   
 
   <link rel="manifest" href="/index.webmanifest">
   <link rel="icon" type="image/png" href="/img/icon-32.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="https://sc2682cornell.github.io/publication/">
+  <link rel="canonical" href="https://gureya.github.io/publication/">
 
   
   
