--- a/index.html
+++ b/index.html
@@ -1140,7 +1140,7 @@
             <h4 class="card-title exp-title text-muted mt-0 mb-1">Tutorial Fellow, Research Assistant</h4>
             <h4 class="card-title exp-company text-muted my-0"><a href="https://sci.uonbi.ac.ke/" target="_blank" rel="noopener">University of Nairobi</a></h4>
             <div class="text-muted exp-meta">
-              August 2012 - March 2013
+              April 2013 - August 2013, October 2015 - September 2016
               
               
                 <span class="middot-divider"></span>
