--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
 
    <!-- <p>Hello, my name is Shuang Chen (陈爽). I am a fifth-year Ph.D. candidate in the <a href="http://www.csl.cornell.edu" target="_blank">Computer Systems Lab</a> at Cornell University, advised by <a href="http://martinez.csl.cornell.edu" target="_blank">Prof. José F. Martínez</a>.  My research focuses on scheduling and managing interactive services in datacenters. Currently, I am working on improving performance of interactive services by leveraging emerging memory technologies.</p> -->
 
-    <p>Hello, my name is David Gureya. I am <a href="emjd-dc.eu">Erasmus Mundus Joint Doctoral Fellow</a> at Universidade De Lisboa, Instituto Superior Técnico, Portugal and KTH Royal Institute of Technology, Sweden. I work on "Resource Allocation for Data-Intensive Services in the Cloud" under the joint supervision of <a href="http://www.gsd.inesc-id.pt/~jpbarreto/">Prof. João Pedro Barreto</a> and <a href="https://people.kth.se/~vladv/">Prof. Vladimir Vlassov.</a></p>
+    <p>Hello, my name is David Gureya. I am <a href="http://emjd-dc.eu/">Erasmus Mundus Joint Doctoral Fellow</a> at Universidade De Lisboa, Instituto Superior Técnico, Portugal and KTH Royal Institute of Technology, Sweden. I work on "Resource Allocation for Data-Intensive Services in the Cloud" under the joint supervision of <a href="http://www.gsd.inesc-id.pt/~jpbarreto/">Prof. João Pedro Barreto</a> and <a href="https://people.kth.se/~vladv/">Prof. Vladimir Vlassov.</a></p>
 
 
     <div class="row">
