--- a/index.html
+++ b/index.html
@@ -687,9 +687,9 @@
   <div class="col-12 col-lg-8">
 
     <div class="alert alert-note">
-  <div>
+  <!--<div>
     Quickly discover relevant content by <a href="https://gureya.github.io/publication/" target="_blank">filtering publications</a>.
-  </div>
+  </div> -->
 </div>
 
 
