--- a/index.html
+++ b/index.html
@@ -692,6 +692,35 @@
   </div> -->
 </div>
 
+<div class="pub-list-item" style="margin-bottom: 1rem" itemscope itemtype="http://schema.org/CreativeWork">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+  <span itemprop="author" class="article-metadata li-cite-author">
+    
+  <span itemprop="author name" itemtype="http://schema.org/Person"><a href=""><strong>David Gureya</strong></a></span>,
+  <span itemprop="author name" itemtype="http://schema.org/Person"><a href="">João Barreto</a></span>, 
+  <span itemprop="author name" itemtype="http://schema.org/Person"><a href="">Vladimir Vlassov</a></span>
+
+  </span>
+  (2021).
+  <a href="https://doi.org/10.1145/3409964.3461823" itemprop="name">Generalizing QoS‑Aware Memory Bandwidth Allocation to Multi‑Socket Cloud Servers</a>.
+  in <em><a href="https://conferences.computer.org/cloud/2021/">IEEE CLOUD'21</a></em>.
+  <p>
+    <!--- 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/pdf/balm_cloud.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/ppt/balm_spaa.pdf" target="_blank" rel="noopener">
+  Slides
+</a>
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://www.youtube.com/watch?v=3V_Z_wqgZbY" target="_blank" rel="noopener">
+  Video
+</a> --->
+
+</p>  
+</div>
+
 
 <div class="pub-list-item" style="margin-bottom: 1rem" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
@@ -712,6 +741,10 @@
 
 <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/ppt/balm_spaa.pdf" target="_blank" rel="noopener">
   Slides
+</a>
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://www.youtube.com/watch?v=3V_Z_wqgZbY" target="_blank" rel="noopener">
+  Video
 </a>
 
 </p>  
